chore: change domain for swagger doc api